--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>PPHT——个人主页</title>
+    <title>PPHT个人主页</title>
     <script type="application/javascript" src="https://unpkg.com/three"></script>
     <script type="application/javascript" src="https://unpkg.com/vue/dist/vue.runtime.min.js"></script>
     <!--<script src="https://cdn.bootcss.com/three.js/r83/three.js"></script>-->
