--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0.1;url=/build/index.html">
+    <meta http-equiv="refresh" content="0.1;url=/build/3DTest.html">
 </head>
 <body>
 加载中。。。
